objects/Registration__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Candidate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Exam__c</fullName>
        <label>Date and time of exam</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Display_VTS_Registration_ID__c</fullName>
        <description>This field is used on page layouts to display the VTS Registration Id in a friendlier manner (without commas)</description>
        <formula>text(VTS_Registration_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam__c</fullName>
        <label>Exam</label>
        <referenceTo>Exam__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Process_State_Code__c</fullName>
        <label>Process state code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test center</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Driver_Version__c</fullName>
        <label>Test driver / version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTS_Registration_ID__c</fullName>
        <externalId>true</externalId>
        <label>VTS Registration ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Registration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{MM}-{00000}</displayFormat>
        <label>Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>